tests/errors/import_deprecated.orus
import "tests/modules/hello_module.orus"

fn main() {}
